--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,17 @@
 cmake_minimum_required(VERSION 3.25)
-project(ATM)
+project(
+        ATM
+        VERSION 2.0
+        LANGUAGES CXX
+)
 
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(main src/main.cpp)
+add_executable(main
+        src/main.cpp
+        include/ATM.h
+        include/ATM.cpp
+        )
