--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(main
-        src/main.cpp
+        main.cpp
         include/ATM.h
-        include/ATM.cpp
+        src/ATM.cpp
         )
